Features for interfacing with record based flat files such as logs